<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tan_background"
    android:orientation="vertical"
    tools:context="com.example.android.justmusic.MainActivity">

    <TextView

        android:id="@+id/Textview4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:padding="5dp"
        android:text="@string/text5"
        android:textColor="#000000"
        android:textSize="12sp"
        android:textStyle="bold" />

    <View
        android:layout_width="5dp"
        android:layout_height="5dp"
        android:background="@android:color/darker_gray" />


    <TextView
        android:id="@+id/albums"
        style="@style/CategoryStyle"
        android:background="@color/category_albums"
        android:text="@string/category_albums" />

    <View
        android:layout_width="5dp"
        android:layout_height="5dp"
        android:background="@android:color/darker_gray" />


    <TextView
        android:id="@+id/artists"
        style="@style/CategoryStyle"
        android:background="@color/category_artists"
        android:text="@string/category_artists" />

    <View
        android:layout_width="5dp"
        android:layout_height="5dp"
        android:background="@android:color/darker_gray" />


    <TextView
        android:id="@+id/now_playing"
        style="@style/CategoryStyle"
        android:background="@color/category_now_playing"
        android:text="@string/category_now_playing" />

    <View
        android:layout_width="5dp"
        android:layout_height="5dp"
        android:background="@android:color/darker_gray" />


    <TextView
        android:id="@+id/payment"
        style="@style/CategoryStyle"
        android:background="@color/category_payment"
        android:text="@string/category_payment" />

    <View
        android:layout_width="5dp"
        android:layout_height="5dp"
        android:background="@android:color/darker_gray" />


    <ImageView

        android:id="@+id/music2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/music2" />


</LinearLayout>

