<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tan_background"
    android:orientation="vertical"
    tools:context="com.example.android.justmusic.nowPlayingActivity">

    <TextView

        android:id="@+id/Textview1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/albumwalker"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/walker2"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@drawable/walker2" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/play3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_skip_previous_black_24dp" />

        <ImageView
            android:id="@+id/play2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_play_circle_outline_black_24dp" />

        <ImageView
            android:id="@+id/play"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_skip_next_black_24dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/artists2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="4dp"
            android:text="@string/artists" />

        <Button
            android:id="@+id/main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="4dp"
            android:text="@string/main" />

        <Button
            android:id="@+id/albums2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="4dp"
            android:text="@string/albums" />

        <Button
            android:id="@+id/payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="4dp"
            android:text="@string/payment" />

    </LinearLayout>

    <TextView
        android:id="@+id/Textview4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/text3"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>
